Fix iOS overflow scroll by locking html/body to viewport

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,10 @@
 
 html, body {
   background-color: #000000;
+  overflow: hidden;
+  height: 100%;
+  position: fixed;
+  width: 100%;
 }
 
 body {
